# netidm

./: .codespell_dictionary  .dockerignore  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Makefile  README.md  RELEASE_NOTES.md  SECURITY.md  shell.nix
libs/client/: Cargo.toml
libs/client/src/: application.rs  domain.rs  group.rs  lib.rs  message.rs  oauth.rs  person.rs  saml.rs  schema.rs  scim.rs  service_account.rs  sync_account.rs  system.rs  wg.rs
libs/file_permissions/: Cargo.toml
libs/file_permissions/src/: unix.rs
proto/: Cargo.toml
proto/src/: attribute.rs  backup.rs  cli.rs  constants.rs  lib.rs  messages.rs  oauth2.rs  wg.rs
proto/src/constants/: uri.rs
proto/src/internal/: error.rs  mod.rs
proto/src/scim_v1/: client.rs  mod.rs  server.rs  synch.rs
proto/src/v1/: auth.rs  logout.rs  mod.rs
server/core/: Cargo.toml  package-lock.json  package.json
server/core/src/: admin.rs  config.rs  crypto.rs  interval.rs  ldaps.rs  lib.rs  logout_worker.rs  preload.rs
server/core/src/actors/: internal.rs  mod.rs  v1_read.rs  v1_scim.rs  v1_write.rs
server/core/src/https/: cache_buster.rs  errors.rs  generic.rs  manifest.rs  metrics_handler.rs  mod.rs  oauth2.rs  trace.rs  v1.rs  v1_domain.rs  v1_oauth2.rs  v1_saml.rs  v1_scim.rs  v1_wg.rs
server/core/src/repl/: codec.rs  config.rs  mod.rs
server/core/static/: style.css  style.js
server/core/templates/: base.html  base_htmx.html  credentials_reset.html  credentials_reset_form.html  credentials_revoke_form.html  credentials_status.html  credentials_update_partial.html  credentials_update_primary.html  login.html  login_base.html  login_ldap.html  login_provision.html  navbar.html  oauth2_device_login.html  oauth2_device_success.html  reauth_readonly.html  unrecoverable_error.html
server/core/templates/admin/: admin_group_member_entry_partial.html
server/core/templates/user_settings/: form_email_entry_partial.html  form_modifiable_entry_modifiable_list_partial.html
server/lib/: Cargo.toml
server/lib-macros/: Cargo.toml
server/lib/benches/: image_benches.rs
server/lib/src/: entry.rs  event.rs  filter.rs  lib.rs  modify.rs  schema.rs  testkit.rs  value.rs
server/lib/src/be/: dbvalue.rs  idl_arc_sqlite.rs  idl_sqlite.rs  keystorage.rs  mod.rs
server/lib/src/constants/: entries.rs  mod.rs  uuids.rs  values.rs
server/lib/src/credential/: apppwd.rs  mod.rs  totp.rs
server/lib/src/idm/: account.rs  application.rs  applinks.rs  authentication.rs  bitbucket_connector.rs  credupdatesession.rs  event.rs  generic_oidc_connector.rs  github_connector.rs  gitlab_connector.rs  google_connector.rs  group.rs  group_mapping.rs  identityverification.rs  ldap.rs  ldap_connector.rs  linkedin_connector.rs  logout.rs  logout_delivery.rs  microsoft_connector.rs  mod.rs  oauth2.rs  oauth2_client.rs  oauth2_connector.rs  openshift_connector.rs  radius.rs  reauth.rs  saml_client.rs  saml_connector.rs  saml_session.rs  scim.rs  server.rs  serviceaccount.rs  wg.rs
server/lib/src/migration_data/: mod.rs  types.rs
server/lib/src/plugins/: cred_import.rs  domain.rs  dyngroup.rs  eckeygen.rs  hmac_name_unique.rs  oauth2.rs  refint.rs  session.rs
server/lib/src/repl/: consumer.rs  supplier.rs  tests.rs
server/lib/src/server/: batch_modify.rs  create.rs  delete.rs  identity.rs  migrations.rs  mod.rs  modify.rs  recycle.rs  scim.rs  utils.rs
server/lib/src/valueset/: address.rs  apppwd.rs  auditlogstring.rs  binary.rs  bool.rs  certificate.rs  cred.rs  datetime.rs  iname.rs  index.rs  int64.rs  iutf8.rs  json.rs  key_internal.rs  message.rs  mod.rs  nsuniqueid.rs  oauth.rs  session.rs  ssh.rs  syntax.rs  uihint.rs  uint32.rs  uint64.rs  url.rs  utf8.rs  uuid.rs
server/testkit/: Cargo.toml
server/testkit/defunct_examples/: enumerating_access.rs
server/testkit/defunct_tests/: oauth2_device_flow.rs
server/testkit/src/: lib.rs
server/testkit/tests/testkit/: apidocs.rs  connector_test.rs  domain.rs  forward_auth_test.rs  github_connector_test.rs  github_mock.rs  google_connector_test.rs  google_mock.rs  group.rs  group_mapping_test.rs  http_manifest.rs  https_middleware.rs  identity_verification_tests.rs  integration.rs  ip_addr_extractors.rs  ldap_basic.rs  logout_test.rs  mod.rs  oauth2_client_test.rs  oauth2_grants_test.rs  oauth2_proxy_test.rs  oauth2_test.rs  person.rs  proto_v1_test.rs  refresh_claims_test.rs  scim_test.rs  service_account.rs  system.rs  unix.rs
server/wg/: Cargo.toml
server/wg/src/: alloc.rs  hooks.rs  lib.rs  manager.rs  types.rs
server/wg/src/backend/: boringtun.rs  kernel.rs  mod.rs
tools/dex_migrate/: Cargo.toml
tools/dex_migrate/src/: dex_types.rs  main.rs  map.rs  read.rs  report.rs  write.rs
tools/iam_migrations/freeipa/: 00config-mod.ldif  Cargo.toml
tools/iam_migrations/freeipa/src/: main.rs  opt.rs  tests.rs
tools/iam_migrations/ldap/: Cargo.toml
tools/iam_migrations/ldap/src/: config.rs  main.rs  opt.rs
tools/mail_sender/: Cargo.toml
tools/mail_sender/src/: main.rs  opt.rs
tools/orca/: Cargo.toml  Dockerfile  README.md
tools/orca/src/: error.rs  generate.rs  kani.rs  main.rs  model.rs  opt.rs  populate.rs  run.rs  state.rs
tools/orca/src/models/: auth_only.rs  basic.rs  latency_measurer.rs  read.rs  write.rs
unix_integration/common/: Cargo.toml
unix_integration/common/src/: client.rs  constants.rs  selinux_util.rs  unix_config.rs  unix_passwd.rs  unix_proto.rs
unix_integration/nss_netidm/: Cargo.toml
unix_integration/nss_netidm/src/: core.rs  freebsd_nss.c  hooks.rs  lib.rs  tests.rs
unix_integration/pam_netidm/: Cargo.toml
unix_integration/pam_netidm/debian/: netidm.pam  postinst
unix_integration/pam_netidm/src/: core.rs  tests.rs
unix_integration/pam_netidm/src/pam/: mod.rs  module.rs
unix_integration/resolver/: Cargo.toml  build.rs
unix_integration/resolver/debian/: netidm-unixd.service  postinst  prerm
unix_integration/resolver/src/: lib.rs  resolver.rs
unix_integration/resolver/src/idprovider/: interface.rs  mod.rs  netidm.rs  (+1 more)
unix_integration/resolver/tests/: cache_layer_test.rs  lib_tests.rs
(+765 files in other folders)
