[package]
name = "netidm_proto"
description = "Netidm Protocol Bindings for serde"
documentation = "https://docs.rs/netidm_proto/latest/netidm_proto/"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
test = true
doctest = true

[features]
default = []
test = []

[dependencies]
base32 = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
crypto-glue = { workspace = true }
num_enum = { workspace = true }
peg = { workspace = true }
scim_proto = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["time_0_3", "base64", "hex"] }
sketching = { workspace = true }
smartstring = { workspace = true, features = ["serde"] }
time = { workspace = true, features = ["serde", "std"] }
url = { workspace = true, features = ["serde"] }
urlencoding = { workspace = true }
utoipa = { workspace = true }
strum = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
webauthn-rs-proto = { workspace = true }
sshkey-attest = { workspace = true }
sshkeys = { workspace = true }

[dev-dependencies]
enum-iterator = { workspace = true }
serde_urlencoded = { workspace = true }

[build-dependencies]
netidm_build_profiles = { workspace = true }
