[package]
name = "netidm_client"
description = "Netidm Client Library"
documentation = "https://docs.rs/netidm_client/latest/netidm_client/"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
test = true
doctest = false

[dependencies]
compact_jwt = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
netidm_proto = { workspace = true }
netidm_lib_file_permissions = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_urlencoded = { workspace = true }
time = { workspace = true, features = ["serde", "std"] }
tokio = { workspace = true, features = [
    "rt",
    "net",
    "time",
    "macros",
    "sync",
    "signal",
] }
toml = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
url = { workspace = true, features = ["serde"] }
urlencoding = { workspace = true }
webauthn-rs-proto = { workspace = true }
