[package]
name = "netidm_lib_file_permissions"
description = "Netidm File Permissions Library"
# documentation = "https://docs.rs/netidm_proto/latest/netidm_proto/"
version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
test = true
doctest = false

[dependencies]

[target.'cfg(not(target_family = "windows"))'.dependencies]
netidm_utils_users = { workspace = true }
