[package]
name = "netidmd_lib"
description = "Netidm Server Backend Library"
documentation = "https://docs.rs/netidm/latest/netidm/"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "netidmd_lib"
path = "src/lib.rs"
test = true
doctest = false

[features]
default = []
dhat-heap = ["dep:dhat"]
dhat-ad-hoc = ["dep:dhat"]
dev-oauth2-device-flow = [] # still-in-development oauth2 device flow support
test = []                   # Enable this for cross-package test features.
# Enables the in-process `TestMockConnector` on `pub` surface so
# integration tests in `netidmd_testkit` can register a mock
# connector. Zero release-mode code — gated by
# `#[cfg(any(test, feature = "testkit"))]` in source.
testkit = []

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
base64urlsafedata = { workspace = true }
bitflags = { workspace = true }
compact_jwt = { workspace = true }
concread = { workspace = true }
crypto-glue = { workspace = true }
dhat = { workspace = true, optional = true }
dyn-clone = { workspace = true }
# futures-util = { workspace = true }
hashbrown = { workspace = true }
idlset = { workspace = true }
itertools = { workspace = true }
netidm_proto = { workspace = true }
netidm_lib_crypto = { workspace = true }
ldap3_proto = { workspace = true }
ldap3_client = { workspace = true }
# libsqlite3-sys = { workspace = true }
num_enum = { workspace = true }
rand = { workspace = true }
# PR-CONNECTOR-GITHUB (DL28): outbound REST to GitHub for userinfo /
# emails / orgs / teams and the token endpoint.
reqwest = { workspace = true }
regex = { workspace = true, features = [
    "std",
    "perf",
    "perf-inline",
    "unicode",
    "unicode-gencat",
] }
rustls = { workspace = true }
rusqlite = { workspace = true, features = ["array", "bundled"] }

serde = { workspace = true, features = ["derive"] }
serde_cbor = { workspace = true }
serde_json = { workspace = true }
sketching = { workspace = true }
smolset = { workspace = true }
sshkey-attest = { workspace = true }
time = { workspace = true, features = ["serde", "std"] }
tokio = { workspace = true, features = ["net", "sync", "time", "rt", "rt-multi-thread"] }
nonempty = { workspace = true, features = ["serialize"] }

tracing = { workspace = true, features = ["attributes"] }
url = { workspace = true, features = ["serde"] }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4", "v5"] }
webauthn-rs = { workspace = true, features = [
    "resident-key-support",
    "preview-features",
    "danger-credential-internals",
] }
webauthn-rs-core = { workspace = true }
zxcvbn = { workspace = true }
serde_with = { workspace = true, features = ["time_0_3", "base64"] }
hex = { workspace = true }
lodepng = { workspace = true }
image = { workspace = true, default-features = false, features = [
    "gif",
    "jpeg",
    "webp",
] }
svg = { workspace = true }
flate2 = "1.1.9"
http = { workspace = true }
netidmd_wg = { version = "0.1.26", path = "../wg" }
samael = { version = "0.0.20", features = ["xmlsec"] }
sha2.workspace = true
ipnet = "2.12.0"

# because windows really can't build without the bundled one
[target.'cfg(target_family = "windows")'.dependencies]
whoami = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
compact_jwt = { workspace = true, features = ["unsafe_release_without_verify"] }
futures = { workspace = true }
netidmd_lib_macros = { workspace = true }
# This is needed so that we can use a test feature across the crate boundary to proto
# so we can enable certain hidden test only attributes.
netidm_proto = { workspace = true, features = ["test"] }
webauthn-authenticator-rs = { workspace = true, features = [
    "softpasskey",
    "softtoken",
] }


[target.'cfg(not(target_os = "illumos"))'.dev-dependencies]
mimalloc = { workspace = true }

[build-dependencies]
hashbrown = { workspace = true }
netidm_build_profiles = { workspace = true }
regex = { workspace = true }

[package.metadata.cargo-machete]
ignored = [
    "openssl-sys", # see note above
    "whoami",      # used in windows
]
