[package]
name = "netidmd_testkit"
description = "Netidm Server Test Framework"
documentation = "https://docs.rs/netidm/latest/netidm/"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "netidmd_testkit"
path = "src/lib.rs"
test = false
doctest = false

[features]

[dependencies]
netidm_client = { workspace = true }
netidm_proto = { workspace = true }
netidmd_core = { workspace = true }
# Enable the `testkit` feature on `netidmd_lib` so the in-process
# `TestMockConnector` is reachable from integration tests.
netidmd_lib = { workspace = true, features = ["testkit"] }
reqwest = { workspace = true }
serde = { workspace = true }
sketching = { workspace = true }
testkit-macros = { workspace = true }
tokio = { workspace = true, features = [
    "net",
    "sync",
    "io-util",
    "macros",
    "rt",
] }
tracing = { workspace = true, features = ["attributes"] }
webauthn-authenticator-rs = { workspace = true, features = [
    "softpasskey",
    "softtoken",
] }
url = { workspace = true, features = ["serde"] }

[build-dependencies]
netidm_build_profiles = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
hashbrown = { workspace = true }
cidr = { workspace = true }
compact_jwt = { workspace = true, features = ["unsafe_release_without_verify"] }
escargot = "0.5.15"
futures = { workspace = true }
hex = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
hyper-util = { workspace = true }
ldap3_client = { workspace = true }
oauth2_ext = { workspace = true, default-features = false, features = [
    "reqwest",
] }
serde_json = { workspace = true }
time = { workspace = true }
netidm_lib_crypto = { workspace = true }
uuid = { workspace = true }
jsonschema = { workspace = true }
base64 = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["escargot", "futures", "netidm_build_profiles"]
