[package]
name = "netidmd_wg"
version = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait.workspace = true
boringtun = { version = "0.7.0", features = ["device"] }
futures-util.workspace = true
hashbrown.workspace = true
ipnet = "2.12.0"
rtnetlink = "0.20.0"
tokio = { workspace = true }
tracing = { workspace = true }
tun2 = { version = "4.0.0", features = ["tokio"] }
uuid.workspace = true
wireguard-control = "1.7.1"
