[package]
name = "netidm-mail-sender"
default-run = "netidm-mail-sender"
description = "Netidm Mail Sender Service"
documentation = "https://netidm.github.io/netidm/stable/"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "netidm-mail-sender"
path = "src/main.rs"
doc = false
test = true
doctest = false

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
chrono = { workspace = true }
cron = { workspace = true }
hashbrown = { workspace = true }
netidm_client = { workspace = true }
netidm_proto = { workspace = true }
netidm_lib_file_permissions = { workspace = true }
lettre = { workspace = true, default-features = false, features = [
    "builder",
    "pool",
    "hostname",
    "smtp-transport",
    "tokio1-rustls",
    "aws-lc-rs",
    "rustls-platform-verifier",
    "tokio1",
    "serde",
    "tracing",
] }
tokio = { workspace = true, features = ["rt", "macros", "net"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"] }
serde = { workspace = true, features = ["derive"] }
time = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["serde"] }


[target.'cfg(target_family = "unix")'.dependencies]
netidm_utils_users = { workspace = true }

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["clap_complete"]
