[package]
name = "netidm_unix_common"
description = "Netidm Unix Resolver - Common Libraries"
documentation = "https://docs.rs/netidm/latest/netidm/"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[features]
client_sync_tracing = []
default = ["unix"]
unix = []
selinux = ["dep:selinux", "dep:netidm_utils_users"]
tpm = []

[lib]
name = "netidm_unix_common"
path = "src/lib.rs"
test = true
doctest = false

[dependencies]
bytes = { workspace = true }
csv = { workspace = true }
futures = { workspace = true }
netidm_proto = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha-crypt = { workspace = true }
yescrypt = { workspace = true }
time = { workspace = true, features = ["serde", "std"] }
tokio = { workspace = true, features = ["time", "net", "macros"] }
tokio-util = { workspace = true, features = ["codec"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

selinux = { workspace = true, optional = true }
netidm_utils_users = { workspace = true, optional = true }

[build-dependencies]
netidm_build_profiles = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["netidm_build_profiles"]
