[package]
name = "nss_netidm"
description = "Netidm NSS module"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "nss_netidm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
netidm_unix_common = { workspace = true }

[target.'cfg(not(target_family = "windows"))'.dependencies]
libnss = { workspace = true }
libc = { workspace = true }
[target."cfg(target_os = \"freebsd\")".build-dependencies]
cc = "^1.2.60"

## Debian packaging
[package.metadata.deb]
name = "libnss-netidm"
maintainer = "James Hodgkinson <james@terminaloutcomes.com>"
depends = ""
section = "network"
priority = "optional"
assets = [
    [
        "target/release/libnss_netidm.so",
        # This is not the final path as cargo-deb needs to be run with --multiarch=foreign
        "usr/lib/libnss_netidm.so.2",
        "644",
    ],
]

[package.metadata.cargo-machete]
ignored = ["cc"]
