[package]
name = "pam_netidm"
description = "Netidm PAM module"
links = "pam"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[lib]
name = "pam_netidm"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
netidm_unix_common = { workspace = true }
libc = { workspace = true }
tracing-subscriber = { workspace = true }
tracing = { workspace = true }
time = { workspace = true }

[build-dependencies]
pkg-config = { workspace = true }

## Debian packaging
[package.metadata.deb]
name = "libpam-netidm"
maintainer = "James Hodgkinson <james@terminaloutcomes.com>"
depends = ["libc6", "libpam0g"]
section = "network"
priority = "optional"
maintainer-scripts = "debian/"
assets = [
    [
        "target/release/libpam_netidm.so",
        # This is not the final path as cargo-deb needs to be run with --multiarch=foreign
        "usr/lib/security/pam_netidm.so",
        "644",
    ],
    [
        "debian/netidm.pam",
        "usr/share/pam-configs/netidm",
        "644",
    ],
]

[package.metadata.cargo-machete]
ignored = ["pkg-config"]
