[package]
name = "netidm_unix_int"
description = "Netidm Unix Integration Clients"
documentation = "https://docs.rs/netidm/latest/netidm/"

version = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

[features]
default = ["unix"]
unix = []
selinux = ["netidm_unix_common/selinux"]
tpm = ["kanidm-hsm-crypto/tpm", "netidm_unix_common/tpm"]
dhat-heap = ["dep:dhat"]
dhat-ad-hoc = ["dep:dhat"]

[[bin]]
name = "netidm_unixd"
path = "src/bin/netidm_unixd.rs"
required-features = ["unix"]
test = false
doctest = false

[[bin]]
name = "netidm_unixd_tasks"
path = "src/bin/netidm_unixd_tasks.rs"
required-features = ["unix"]
test = false
doctest = false

[[bin]]
name = "netidm_ssh_authorizedkeys"
path = "src/bin/netidm_ssh_authorizedkeys.rs"
required-features = ["unix"]
test = false
doctest = false

[[bin]]
name = "netidm-unix"
path = "src/bin/netidm-unix.rs"
required-features = ["unix"]
test = false
doctest = false

[lib]
name = "netidm_unix_resolver"
path = "src/lib.rs"
test = true
doctest = false

[dependencies]
async-trait = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
dialoguer = { workspace = true }
dhat = { workspace = true, optional = true }
futures = { workspace = true }
hashbrown = { workspace = true }
libc = { workspace = true }
lru = { workspace = true }
netidm_client = { workspace = true }
netidm_proto = { workspace = true }
kanidm-hsm-crypto = { workspace = true }
netidm_lib_crypto = { workspace = true }
netidm_lib_file_permissions = { workspace = true }
netidm_unix_common = { workspace = true }
notify-debouncer-full = { workspace = true }
rand = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sketching = { workspace = true }
time = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = [
    "rt",
    "rt-multi-thread",
    "fs",
    "macros",
    "sync",
    "time",
    "net",
    "io-util",
] }
tokio-util = { workspace = true, features = ["codec"] }
tracing = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { workspace = true }
sd-notify = { workspace = true }
prctl = { workspace = true }
procfs = { workspace = true }

[target.'cfg(not(target_family = "windows"))'.dependencies]
netidm_utils_users = { workspace = true }

[dev-dependencies]
netidmd_core = { workspace = true }
netidmd_testkit = { workspace = true }
tempfile = { workspace = true }

[build-dependencies]
clap = { workspace = true, features = ["derive"] }
clap_complete = { workspace = true }
netidm_build_profiles = { workspace = true }

## Debian packaging
# We only package unixd itself here as shared libraries must be packaged separarately due to multiarch rules.
[package.metadata.deb]
name = "netidm-unixd"
maintainer = "James Hodgkinson <james@terminaloutcomes.com>"
depends = [
	"libc6",
	"tpm-udev",
	"libpam-netidm",
	"libnss-netidm"
]
section = "network"
priority = "optional"
changelog = "../../target/debian/changelog"  # Generated by platform/debian/build_debs.sh
assets = [
    [ "target/release/netidm_ssh_authorizedkeys", "usr/sbin/", "755" ],
    [ "target/release/netidm_unixd_tasks", "usr/sbin/", "755" ],
    [ "target/release/netidm_unixd", "usr/sbin/", "755" ],
    [ "target/release/netidm-unix", "usr/sbin/", "755" ],
    [ "../../examples/unixd-safe-default", "etc/netidm/unixd", "644" ],
    [ "../../examples/netidm-safe-default", "etc/netidm/config", "644" ],
    [ "../../examples/netidm", "usr/share/netidm-unixd/", "444" ],
    [ "../../examples/unixd", "usr/share/netidm-unixd/", "444" ],
    [ "../../examples/sshd-config.conf", "etc/ssh/sshd_config.d/10-netidm.conf", "644"],
]
maintainer-scripts = "debian/"
systemd-units = [
	{ unit-name = "netidm-unixd", enable = true},
	{ unit-name = "netidm-unixd-tasks", enable = true},
]

[package.metadata.cargo-machete]
ignored = ["netidm_build_profiles", "clap_complete"]
